Fix spacing issues with menu.

--- a/src/styles/components/menu.css
+++ b/src/styles/components/menu.css
@@ -47,6 +47,13 @@
     border-radius: 5px;
 }
 
+.menu-section-anchor {
+    display: block;
+    height: 150px; /*same height as header*/
+    margin-top: -150px; /*same height as header*/
+    visibility: hidden;
+}
+
 .meal-container {
     width: 100%;
     border-radius: 5px;
